--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -49,7 +49,8 @@
         "share": "Share",
         "share-on-facebook": "Share on Facebook",
         "share-on-x": "Share on X (Twitter)",
-        "share-via-email": "Share via Email"
+        "share-via-email": "Share via Email",
+        "continue-reading": "Continue reading"
     },
     "product": {
         "add-to-wishlist": "Add to Wishlist",
