Storefront: Improve product page.

--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -31,30 +31,33 @@
         "buy": "Buy",
         "cart-not-ready": "Hang on...",
         "cart": "Cart",
+        "contact": "Contact",
+        "continue-reading": "Continue reading",
         "countries": "Countries",
         "decrease": "Decrease",
+        "description": "Description",
+        "details": "Details",
+        "email-tooltip": "Send us an email",
+        "email": "Email",
         "increase": "Increase",
         "language-and-region-settings": "Language and Region settings",
         "out-of-stock": "Out of Stock",
+        "phone-tooltip": "Call us",
+        "phone": "Phone",
         "quantity-too-low": "Too Low Quantity",
         "quantity": "Quantity",
-        "search": "Search",
         "remove": "Remove",
-        "contact": "Contact",
-        "email": "Email",
-        "phone": "Phone",
-        "email-tooltip": "Send us an email",
-        "phone-tooltip": "Call us",
-        "wishlist": "Wishlist",
-        "share": "Share",
+        "search": "Search",
         "share-on-facebook": "Share on Facebook",
         "share-on-x": "Share on X (Twitter)",
         "share-via-email": "Share via Email",
-        "continue-reading": "Continue reading"
+        "share": "Share",
+        "wishlist": "Wishlist"
     },
     "product": {
         "add-to-wishlist": "Add to Wishlist",
         "attributes": "Attributes",
+        "barcode": "Barcode",
         "browse-all-products-by-brand": "Browse all products by {0}",
         "by": "by",
         "dispatch-within-n-business-days": "Dispatch within {0} business days",
@@ -68,6 +71,7 @@
         "percentage-off": "{0}% OFF",
         "recommendations": "Recommendations",
         "save-n-per-item": "Save {0} per item!",
+        "sku": "SKU",
         "skus": "SKUs",
         "this-product-is-vegan": "This product is vegan!",
         "vegan": "Vegan",
