Storefront: Slight improvements to the `CartLine` design.

--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -14,12 +14,14 @@
         "promo-codes": "Promo Codes",
         "sale-discount": "Sale Discount",
         "discount": "Discount",
+        "discounts": "Discounts",
         "automatic-discount": "Automatic Discount",
+        "automatic-discounts": "Automatic Discounts",
         "shipping-calculated-at-checkout": "Shipping calculated at checkout",
         "shipping": "Shipping",
         "subtotal": "Subtotal",
         "view-cart": "View your shopping cart",
-        "remove-from-cart": "Remove {0} from the cart",
+        "remove-n-from-cart": "Remove {0} from the cart",
         "clear-cart": "Clear cart",
         "n-items": "{0} item(s)"
     },
@@ -44,6 +46,8 @@
         "out-of-stock": "Out of Stock",
         "phone-tooltip": "Call us",
         "phone": "Phone",
+        "price": "Price",
+        "product": "Product",
         "quantity-too-low": "Too Low Quantity",
         "quantity": "Quantity",
         "remove": "Remove",
