Storefront: Improve `size` option detection.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -1,46 +1,87 @@
 {
     "cart": {
-        "add-n-to-your-cart": "Fügen Sie {0} zu Ihrem Warenkorb hinzu",
-        "away-from-getting": "Bis zu",
+        "add-n-to-your-cart": "{0} zum Warenkorb hinzufügen",
+        "away-from-free-shipping": "Verpassen Sie kein tolles Angebot! Fügen Sie Ihrem Einkauf Artikel im Wert von weiteren {0} hinzu und erhalten Sie einen komplett KOSTENLOSEN Versand.",
+        "away-from-getting": "kurz davor zu bekommen",
         "continue-to-checkout": "Zur Kasse gehen",
-        "estimated-total": "Geschätzte Gesamtsumme",
-        "free-shipping-on-this-order": "KOSTENLOSEM Versand für diese Bestellung!",
-        "free-shipping": "KOSTENLOSEM Versand",
-        "label-cart-note": "Fügen Sie Ihrer Bestellung Anweisungen oder Sonderwünsche hinzu (optional)",
+        "estimated-total": "Geschätzter Gesamtbetrag",
+        "free-shipping-on-this-order": "Juhu, Sie qualifizieren sich für KOSTENLOSEN Versand für diese Bestellung. Was für ein tolles Angebot!",
+        "free-shipping": "KOSTENLOSER Versand",
+        "label-cart-note": "Fügen Sie Ihrem Einkauf Anweisungen oder spezielle Anfragen hinzu (optional)",
         "order-summary": "Bestellübersicht",
-        "placeholder-cart-note": "Wie können wir das zu einem besonderen Erlebnis für Sie machen? Gibt es etwas, das wir beachten sollten?",
+        "placeholder-cart-note": "Wie können wir dies zu einem unvergesslichen Erlebnis für Sie machen? Gibt es spezielle Anfragen oder Anweisungen, die Sie uns mitteilen möchten?",
+        "products": "Produkte",
         "promo-codes": "Aktionscodes",
-        "sale-discount": "Sale-Rabatt",
+        "sale-discount": "Rabatt auf den Verkauf",
         "discount": "Rabatt",
-        "shipping-calculated-at-checkout": "Versand wird an der Kasse berechnet",
+        "discounts": "Rabatte",
+        "automatic-discount": "Automatischer Rabatt",
+        "automatic-discounts": "Automatische Rabatte",
+        "shipping-calculated-at-checkout": "Versandkosten werden an der Kasse berechnet",
         "shipping": "Versand",
         "subtotal": "Zwischensumme",
-        "view-cart": "Warenkorb ansehen"
+        "view-cart": "Warenkorb anzeigen",
+        "remove-n-from-cart": "{0} aus dem Warenkorb entfernen",
+        "clear-cart": "Warenkorb leeren",
+        "n-items": "{0} Artikel"
     },
     "common": {
         "add-to-cart": "In den Warenkorb",
         "add": "Hinzufügen",
         "added-to-cart": "Hinzugefügt!",
+        "blog": "Blog",
         "buy": "Kaufen",
-        "cart-not-ready": "Einen augenblick...",
+        "cart-not-ready": "Einen Moment...",
         "cart": "Warenkorb",
-        "countries": "Länder",
-        "language-and-region-settings": "Einstellungen für Sprache und Region",
-        "out-of-stock": "Ausverkauft",
-        "quantity-too-low": "Die Menge ist zu niedrig",
-        "quantity": "Menge",
-        "increase": "Erhöhen",
-        "decrease": "Verringern",
-        "search": "Suche",
         "contact": "Kontakt",
+        "continue-reading": "Weiterlesen",
+        "countries": "Länder",
+        "decrease": "Verringern",
+        "description": "Beschreibung",
+        "details": "Details",
+        "email-tooltip": "Schreiben Sie uns eine E-Mail",
         "email": "E-Mail",
+        "increase": "Erhöhen",
+        "language-and-region-settings": "Sprache und Region Einstellungen",
+        "out-of-stock": "Ausverkauft",
+        "phone-tooltip": "Rufen Sie uns an",
         "phone": "Telefon",
-        "email-tooltip": "Senden Sie uns eine E-Mail",
-        "phone-tooltip": "Rufen Sie uns an"
+        "price": "Preis",
+        "product": "Produkt",
+        "quantity-too-low": "Zu geringe Menge",
+        "quantity": "Menge",
+        "remove": "Entfernen",
+        "search": "Suche",
+        "share-on-facebook": "Auf Facebook teilen",
+        "share-on-x": "Auf X (Twitter) teilen",
+        "share-via-email": "Per E-Mail teilen",
+        "share": "Teilen",
+        "size": "Größe",
+        "wishlist": "Wunschliste"
     },
     "product": {
-        "recommendations": "Andere Kunden genießen diese Produkte auch zusammen",
-        "SKUs": "SKUs",
-        "add-to-wishlist": "Zum Wunschliste hinzufügen"
+        "add-to-wishlist": "Zur Wunschliste hinzufügen",
+        "attributes": "Attribute",
+        "barcode": "Barcode",
+        "browse-all-products-by-brand": "Alle Produkte von {0} durchsuchen",
+        "by": "von",
+        "dispatch-within-n-business-days": "Versand innerhalb von {0} Werktagen",
+        "in-stock-and-available": "Auf Lager und verfügbar",
+        "in-stock": "Auf Lager",
+        "ingredients": "Zutaten",
+        "n-in-stock-and-available": "{0} auf Lager und verfügbar",
+        "n-in-stock": "{0} auf Lager",
+        "new": "Neu",
+        "nutritional-content": "Nährwertgehalt",
+        "percentage-off": "{0}% RABATT",
+        "recommendations": "Empfehlungen",
+        "save-n-per-item": "Sparen Sie {0} pro Artikel!",
+        "sku": "SKU",
+        "skus": "SKUs",
+        "this-product-is-vegan": "Dieses Produkt ist vegan!",
+        "vegan": "Vegan",
+        "what-a-deal": "Was für ein Angebot!",
+        "you-may-also-like": "Das könnte Ihnen auch gefallen",
+        "you-save": "Sie sparen"
     }
 }
