--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -56,6 +56,7 @@
         "share-on-x": "Share on X (Twitter)",
         "share-via-email": "Share via Email",
         "share": "Share",
+        "size": "Size",
         "wishlist": "Wishlist"
     },
     "product": {
