--- a/apps/storefront/src/locales/es.json
+++ b/apps/storefront/src/locales/es.json
@@ -1,75 +1,87 @@
 {
     "cart": {
         "add-n-to-your-cart": "Agregar {0} a tu carrito",
-        "away-from-free-shipping": "¡No te pierdas una gran oferta! Agrega artículos por un valor adicional de {0} a tu pedido y obtén envío COMPLETAMENTE GRATIS, ¡a nuestra cuenta!",
+        "away-from-free-shipping": "¡No te pierdas una gran oferta! Agrega artículos por un valor adicional de {0} a tu pedido y obtén envío completamente GRATIS, por cuenta de la casa.",
         "away-from-getting": "lejos de conseguir",
-        "continue-to-checkout": "Continuar a la caja",
-        "estimated-total": "Total estimado",
-        "free-shipping-on-this-order": "¡Woohoo, calificas para ENVÍO GRATIS en este pedido! ¡Qué trato tan dulce!",
+        "continue-to-checkout": "Continuar al Pago",
+        "estimated-total": "Total Estimado",
+        "free-shipping-on-this-order": "¡Genial! Calificas para envío GRATIS en este pedido. ¡Qué buena oferta!",
         "free-shipping": "Envío GRATIS",
         "label-cart-note": "Agrega instrucciones o solicitudes especiales a tu pedido (opcional)",
-        "order-summary": "Resumen del pedido",
-        "placeholder-cart-note": "¿Cómo podemos hacer que esta sea una experiencia memorable para ti? ¿Alguna solicitud especial o instrucción que nos gustaría que sepamos?",
+        "order-summary": "Resumen del Pedido",
+        "placeholder-cart-note": "¿Cómo podemos hacer que esta sea una experiencia memorable para ti? ¿Alguna solicitud especial o instrucción que quieras que sepamos?",
         "products": "Productos",
-        "promo-codes": "Códigos promocionales",
-        "sale-discount": "Descuento de venta",
+        "promo-codes": "Códigos Promocionales",
+        "sale-discount": "Descuento de Venta",
         "discount": "Descuento",
-        "automatic-discount": "Descuento automático",
-        "shipping-calculated-at-checkout": "El envío se calcula al finalizar la compra",
+        "discounts": "Descuentos",
+        "automatic-discount": "Descuento Automático",
+        "automatic-discounts": "Descuentos Automáticos",
+        "shipping-calculated-at-checkout": "Envío calculado al finalizar la compra",
         "shipping": "Envío",
         "subtotal": "Subtotal",
         "view-cart": "Ver tu carrito de compras",
-        "remove-n-from-cart": "Eliminar {0} del carrito"
+        "remove-n-from-cart": "Eliminar {0} del carrito",
+        "clear-cart": "Vaciar carrito",
+        "n-items": "{0} artículo(s)"
     },
     "common": {
-        "add-to-cart": "Agregar al carrito",
+        "add-to-cart": "Agregar al Carrito",
         "add": "Agregar",
         "added-to-cart": "¡Agregado!",
         "blog": "Blog",
         "buy": "Comprar",
         "cart-not-ready": "Espera...",
         "cart": "Carrito",
+        "contact": "Contacto",
+        "continue-reading": "Seguir leyendo",
         "countries": "Países",
         "decrease": "Disminuir",
-        "increase": "Aumentar",
-        "language-and-region-settings": "Configuración de idioma y región",
-        "out-of-stock": "Agotado",
-        "quantity-too-low": "Cantidad demasiado baja",
-        "quantity": "Cantidad",
-        "search": "Buscar",
-        "remove": "Eliminar",
-        "contact": "Contacto",
-        "email": "Correo electrónico",
-        "phone": "Teléfono",
+        "description": "Descripción",
+        "details": "Detalles",
         "email-tooltip": "Envíanos un correo electrónico",
+        "email": "Correo Electrónico",
+        "increase": "Aumentar",
+        "language-and-region-settings": "Configuración de Idioma y Región",
+        "out-of-stock": "Agotado",
         "phone-tooltip": "Llámanos",
-        "wishlist": "Lista de deseos",
-        "share": "Compartir",
+        "phone": "Teléfono",
+        "price": "Precio",
+        "product": "Producto",
+        "quantity-too-low": "Cantidad Demasiado Baja",
+        "quantity": "Cantidad",
+        "remove": "Eliminar",
+        "search": "Buscar",
         "share-on-facebook": "Compartir en Facebook",
         "share-on-x": "Compartir en X (Twitter)",
-        "share-via-email": "Compartir por correo electrónico"
+        "share-via-email": "Compartir por Correo Electrónico",
+        "share": "Compartir",
+        "size": "Tamaño",
+        "wishlist": "Lista de Deseos"
     },
     "product": {
-        "add-to-wishlist": "Agregar a la lista de deseos",
+        "add-to-wishlist": "Agregar a la Lista de Deseos",
         "attributes": "Atributos",
-        "browse-all-products-by-brand": "Explora todos los productos de {0}",
+        "barcode": "Código de Barras",
+        "browse-all-products-by-brand": "Explorar todos los productos de {0}",
         "by": "por",
-        "dispatch-within-n-business-days": "Despacho dentro de {0} días hábiles",
+        "dispatch-within-n-business-days": "Envío dentro de {0} días hábiles",
         "in-stock-and-available": "En stock y disponible",
         "in-stock": "En stock",
         "ingredients": "Ingredientes",
         "n-in-stock-and-available": "{0} en stock y disponible",
         "n-in-stock": "{0} en stock",
         "new": "Nuevo",
-        "nutritional-content": "Contenido nutricional",
-        "percentage-off": "{0}% de descuento",
+        "nutritional-content": "Contenido Nutricional",
+        "percentage-off": "{0}% de DESCUENTO",
         "recommendations": "Recomendaciones",
         "save-n-per-item": "¡Ahorra {0} por artículo!",
-        "skus": "SKU",
+        "sku": "SKU",
+        "skus": "SKUs",
         "this-product-is-vegan": "¡Este producto es vegano!",
         "vegan": "Vegano",
-        "what-a-deal": "¡Qué ganga!",
-        "you-may-also-like": "También te puede interesar",
+        "what-a-deal": "¡Qué oferta!",
+        "you-may-also-like": "También te puede gustar",
         "you-save": "Ahorras"
     }
 }
