Storefront: Drastically improve geo-redirect design.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -35,12 +35,14 @@
         "cart": "Warenkorb",
         "contact": "Kontakt",
         "continue-reading": "Weiterlesen",
+        "continue": "Weiter",
         "countries": "Länder",
         "decrease": "Verringern",
         "description": "Beschreibung",
         "details": "Details",
         "email-tooltip": "Schreiben Sie uns eine E-Mail",
         "email": "E-Mail",
+        "geo-redirect-message": "Es sieht so aus, als wäre Sie in {0} gelandet. Wählen Sie Ihre Region aus, um lokale Inhalte und online zu kaufen zu sehen.",
         "increase": "Erhöhen",
         "language-and-region-settings": "Sprache und Region Einstellungen",
         "out-of-stock": "Ausverkauft",
