--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -35,17 +35,19 @@
         "cart": "Cart",
         "contact": "Contact",
         "continue-reading": "Continue reading",
+        "continue": "continue",
         "countries": "Countries",
         "decrease": "Decrease",
         "description": "Description",
         "details": "Details",
         "email-tooltip": "Send us an email",
-        "email": "Email",
+        "email": "email",
+        "geo-redirect-message": "It looks like you're in {0}. Select your region to view local content and shop online.",
         "increase": "Increase",
         "language-and-region-settings": "Language and Region settings",
         "out-of-stock": "Out of Stock",
         "phone-tooltip": "Call us",
-        "phone": "Phone",
+        "phone": "phone",
         "price": "Price",
         "product": "Product",
         "quantity-too-low": "Too Low Quantity",
