--- a/apps/storefront/src/locales/es.json
+++ b/apps/storefront/src/locales/es.json
@@ -35,17 +35,19 @@
         "cart": "Carrito",
         "contact": "Contacto",
         "continue-reading": "Seguir leyendo",
+        "continue": "continuar",
         "countries": "Países",
         "decrease": "Disminuir",
         "description": "Descripción",
         "details": "Detalles",
         "email-tooltip": "Envíanos un correo electrónico",
-        "email": "Correo Electrónico",
+        "email": "correo electrónico",
+        "geo-redirect-message": "Parece que estás en {0}. Selecciona tu región para ver el contenido local y comprar online.",
         "increase": "Aumentar",
         "language-and-region-settings": "Configuración de Idioma y Región",
         "out-of-stock": "Agotado",
         "phone-tooltip": "Llámanos",
-        "phone": "Teléfono",
+        "phone": "teléfono",
         "price": "Precio",
         "product": "Producto",
         "quantity-too-low": "Cantidad Demasiado Baja",
