--- a/apps/storefront/src/locales/fr.json
+++ b/apps/storefront/src/locales/fr.json
@@ -24,22 +24,33 @@
         "add-to-cart": "Ajouter au panier",
         "add": "Ajouter",
         "added-to-cart": "Ajouté !",
+        "blog": "Blog",
         "buy": "Acheter",
-        "cart-not-ready": "Patientez...",
+        "cart-not-ready": "Attendez...",
         "cart": "Panier",
+        "contact": "Contact",
+        "continue-reading": "Continuer à lire",
+        "continue": "continuer",
         "countries": "Pays",
+        "decrease": "Diminuer",
+        "description": "Description",
+        "details": "Détails",
+        "email-tooltip": "Envoyez-nous un e-mail",
+        "email": "E-mail",
+        "geo-redirect-message": "Il semble que vous êtes dans {0}. Sélectionnez votre région pour voir le contenu local et acheter en ligne.",
+        "increase": "Augmenter",
         "language-and-region-settings": "Paramètres de langue et de région",
         "out-of-stock": "En rupture de stock",
+        "phone-tooltip": "Appelez-nous",
+        "phone": "Téléphone",
         "quantity-too-low": "Quantité trop faible",
         "quantity": "Quantité",
-        "increase": "Augmenter",
-        "decrease": "Diminuer",
-        "search": "Recherche",
-        "contact": "Contact",
-        "email": "Email",
-        "phone": "Téléphone",
-        "email-tooltip": "Envoyez-nous un e-mail",
-        "phone-tooltip": "Appelez-nous"
+        "search": "Rechercher",
+        "share-on-facebook": "Partager sur Facebook",
+        "share-on-x": "Partager sur X (Twitter)",
+        "share-via-email": "Partager par e-mail",
+        "share": "Partager",
+        "wishlist": "Liste des souhaits"
     },
     "product": {
         "recommendations": "D'autres clients ont également apprécié ces produits ensemble",
