--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -25,24 +25,26 @@
         "buy": "Köp",
         "cart-not-ready": "En sekund...",
         "cart": "Varukorgen",
+        "contact": "Kontakta",
+        "continue": "fortsätt",
         "countries": "Länder",
+        "decrease": "Minska",
+        "email-tooltip": "Skicka oss ett e-postmeddelande",
+        "email": "e-post",
+        "geo-redirect-message": "Det ser ut som att du befinner dig i {0}. Välj din region för att se innehåll och köpa online.",
+        "increase": "Öka",
         "language-and-region-settings": "Språk- och regioninställningar",
         "out-of-stock": "Slutsåld",
+        "phone-tooltip": "Ring oss",
+        "phone": "telefon",
         "quantity-too-low": "För lågt antal",
         "quantity": "Antal",
-        "increase": "Öka",
-        "decrease": "Minska",
         "search": "Sök",
-        "contact": "Kontakta",
-        "email": "E-post",
-        "phone": "Telefon",
-        "email-tooltip": "Skicka oss ett e-postmeddelande",
-        "phone-tooltip": "Ring oss",
-        "wishlist": "Önskelista",
-        "share": "Dela",
         "share-on-facebook": "Dela på Facebook",
         "share-on-x": "Dela på X (Twitter)",
-        "share-via-email": "Dela via E-post"
+        "share-via-email": "Dela via E-post",
+        "share": "Dela",
+        "wishlist": "Önskelista"
     },
     "product": {
         "add-to-wishlist": "Lägg till i din önskelista",
