Storefront: Add initial `<QuantityBreaks/>` impl.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -78,6 +78,7 @@
         "percentage-off": "{0}% RABATT",
         "recommendations": "Empfehlungen",
         "save-n-per-item": "Sparen Sie {0} pro Artikel!",
+        "save-n-percent": "Sparen Sie {0}%",
         "sku": "SKU",
         "skus": "SKUs",
         "this-product-is-vegan": "Dieses Produkt ist vegan!",
