--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -78,6 +78,7 @@
         "percentage-off": "{0}% OFF",
         "recommendations": "Recommendations",
         "save-n-per-item": "Save {0} per item!",
+        "save-n-percent": "Save {0}%",
         "sku": "SKU",
         "skus": "SKUs",
         "this-product-is-vegan": "This product is vegan!",
