--- a/apps/storefront/src/locales/es.json
+++ b/apps/storefront/src/locales/es.json
@@ -78,6 +78,7 @@
         "percentage-off": "{0}% de DESCUENTO",
         "recommendations": "Recomendaciones",
         "save-n-per-item": "¡Ahorra {0} por artículo!",
+        "save-n-percent": "Ahorra {0}%",
         "sku": "SKU",
         "skus": "SKUs",
         "this-product-is-vegan": "¡Este producto es vegano!",
