--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -59,6 +59,7 @@
         "percentage-off": "{0}% OFF",
         "recommendations": "Rekommendationer",
         "save-n-per-item": "Spara {0} per artikel!",
+        "save-n-percent": "Spara {0}%",
         "skus": "Artikelnummer",
         "this-product-is-vegan": "Denna produkt är vegansk!",
         "vegan": "Vegansk",
