Storefront: Add support for free shipping.

--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -68,6 +68,7 @@
         "browse-all-products-by-brand": "Browse all products by {0}",
         "by": "by",
         "dispatch-within-n-business-days": "Dispatch within {0} business days",
+        "free-shipping": "Free Shipping",
         "in-stock-and-available": "In stock and available",
         "in-stock": "In stock",
         "ingredients": "Ingredients",
