Storefront: Add login button to header when flag is set.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -45,6 +45,7 @@
         "geo-redirect-message": "Es sieht so aus, als wäre Sie in {0} gelandet. Wählen Sie Ihre Region aus, um lokale Inhalte und online zu kaufen zu sehen.",
         "increase": "Erhöhen",
         "language-and-region-settings": "Sprache und Region Einstellungen",
+        "login": "Anmelden",
         "out-of-stock": "Ausverkauft",
         "phone-tooltip": "Rufen Sie uns an",
         "phone": "Telefon",
