--- a/apps/storefront/src/locales/en.json
+++ b/apps/storefront/src/locales/en.json
@@ -45,6 +45,7 @@
         "geo-redirect-message": "It looks like you're in {0}. Select your region to view local content and shop online.",
         "increase": "Increase",
         "language-and-region-settings": "Language and Region settings",
+        "login": "login",
         "out-of-stock": "Out of Stock",
         "phone-tooltip": "Call us",
         "phone": "phone",
