--- a/apps/storefront/src/locales/fr.json
+++ b/apps/storefront/src/locales/fr.json
@@ -40,6 +40,7 @@
         "geo-redirect-message": "Il semble que vous êtes dans {0}. Sélectionnez votre région pour voir le contenu local et acheter en ligne.",
         "increase": "Augmenter",
         "language-and-region-settings": "Paramètres de langue et de région",
+        "login": "connexion",
         "out-of-stock": "En rupture de stock",
         "phone-tooltip": "Appelez-nous",
         "phone": "Téléphone",
