--- a/apps/storefront/src/locales/no.json
+++ b/apps/storefront/src/locales/no.json
@@ -29,6 +29,7 @@
         "cart": "Handlekurv",
         "countries": "Land",
         "language-and-region-settings": "Innstillinger for språk og region",
+        "login": "logge inn",
         "out-of-stock": "Utsolgt",
         "quantity-too-low": "For lav mengde",
         "quantity": "Mengde",
