--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -34,6 +34,7 @@
         "geo-redirect-message": "Det ser ut som att du befinner dig i {0}. Välj din region för att se innehåll och köpa online.",
         "increase": "Öka",
         "language-and-region-settings": "Språk- och regioninställningar",
+        "login": "logga in",
         "out-of-stock": "Slutsåld",
         "phone-tooltip": "Ring oss",
         "phone": "telefon",
