--- a/apps/storefront/src/locales/es.json
+++ b/apps/storefront/src/locales/es.json
@@ -45,6 +45,7 @@
         "geo-redirect-message": "Parece que estás en {0}. Selecciona tu región para ver el contenido local y comprar online.",
         "increase": "Aumentar",
         "language-and-region-settings": "Configuración de Idioma y Región",
+        "login": "iniciar sesión",
         "out-of-stock": "Agotado",
         "phone-tooltip": "Llámanos",
         "phone": "teléfono",
