--- a/apps/storefront/src/locales/es.json
+++ b/apps/storefront/src/locales/es.json
@@ -60,6 +60,7 @@
         "share-via-email": "Compartir por Correo Electrónico",
         "share": "Compartir",
         "size": "Tamaño",
+        "n-min-read": "{0} min de lectura",
         "wishlist": "Lista de Deseos"
     },
     "product": {
