--- a/apps/storefront/src/locales/fr.json
+++ b/apps/storefront/src/locales/fr.json
@@ -51,6 +51,7 @@
         "share-on-x": "Partager sur X (Twitter)",
         "share-via-email": "Partager par e-mail",
         "share": "Partager",
+        "n-min-read": "{0} min de lecture",
         "wishlist": "Liste des souhaits"
     },
     "product": {
