--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -45,6 +45,7 @@
         "share-on-x": "Dela på X (Twitter)",
         "share-via-email": "Dela via E-post",
         "share": "Dela",
+        "n-min-read": "{0} min läsning",
         "wishlist": "Önskelista"
     },
     "product": {
