Storefront: Add `<ExportCartButton/>` component.
This is just a thrown together prototype to make it possible for
potential wholesale customers to easily export their carts to CSV so
they can send it to us; it'll eventually be reworked to be cleaner and
support things like PDF etc too.

--- a/apps/storefront/src/locales/de.json
+++ b/apps/storefront/src/locales/de.json
@@ -54,6 +54,8 @@
         "quantity-too-low": "Zu geringe Menge",
         "quantity": "Menge",
         "remove": "Entfernen",
+        "save-as-csv": "Als CSV speichern",
+        "save-as-pdf": "Als PDF speichern",
         "search": "Suche",
         "share-on-facebook": "Auf Facebook teilen",
         "share-on-x": "Auf X (Twitter) teilen",
