--- a/apps/storefront/src/locales/fr.json
+++ b/apps/storefront/src/locales/fr.json
@@ -46,6 +46,9 @@
         "phone": "Téléphone",
         "quantity-too-low": "Quantité trop faible",
         "quantity": "Quantité",
+        "remove": "Supprimer",
+        "save-as-csv": "Enregistrer sous CSV",
+        "save-as-pdf": "Enregistrer sous PDF",
         "search": "Rechercher",
         "share-on-facebook": "Partager sur Facebook",
         "share-on-x": "Partager sur X (Twitter)",
