--- a/apps/storefront/src/locales/no.json
+++ b/apps/storefront/src/locales/no.json
@@ -35,6 +35,9 @@
         "quantity": "Mengde",
         "increase": "Øke",
         "decrease": "Redusere",
+        "remove": "Fjern",
+        "save-as-csv": "Lagre som CSV",
+        "save-as-pdf": "Lagre som PDF",
         "search": "Søk",
         "contact": "Kontakte",
         "email": "E-post",
