--- a/apps/storefront/src/locales/sv.json
+++ b/apps/storefront/src/locales/sv.json
@@ -40,6 +40,9 @@
         "phone": "telefon",
         "quantity-too-low": "För lågt antal",
         "quantity": "Antal",
+        "remove": "Ta bort",
+        "save-as-csv": "Spara som CSV",
+        "save-as-pdf": "Spara som PDF",
         "search": "Sök",
         "share-on-facebook": "Dela på Facebook",
         "share-on-x": "Dela på X (Twitter)",
